--- a/gb/17/3/2/n8866271.md
+++ b/gb/17/3/2/n8866271.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uemdlg368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>地表水及地下水联合运用 台湾不缺水 地层不下陷</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年03月02日讯】（大纪元记者徐翠玲台湾台北报导）台湾2014~2015年闹<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%97%B1%E7%81%BE.md#1">旱灾</a>，2017年3月又进入<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%99%90%E6%B0%B4.md#1">限水</a>状态。台湾每年雨量平均2,500毫米，是世界平均值的2.6倍，但是，缺水却已成常态。屏东科技大学工学院长丁澈士批评，台湾捧着金饭碗要钱（水），笑话一桩。台湾必须翻转取水方式与用水观念，丰水期蓄水于地下，然后取用，枯水期再调配地表水与地下水，联合运用地表水、地下水，就可解决台湾降雨不均、洪水泛滥、<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%9C%B0%E5%B1%82%E4%B8%8B%E9%99%B7.md#1">地层下陷</a>等问题。</p>
-<p>台湾中部、南部分别有70%、90%的<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E9%99%8D%E9%9B%A8%E9%87%8F.md#1">降雨量</a>降在丰水期（5~10月），降雨量分布不均，造成台湾用水非常困难。此外，台湾是地震带，地层脆弱，地形、地貌加上地震及土石流等，导致地面水库淤积、减少寿龄。通常集水区又有很多农业活动的废水排入，让水质更加恶化。</p>
-<p>丁澈士指出，丰水期水库的水浊度很高，大家怕<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%9C%B0%E5%B1%82%E4%B8%8B%E9%99%B7.md#1">地层下陷</a>，拚命用地表水。10月以后进入枯水期，地表水缺水，想抽地下水，地下水未做调蓄，水源早已流失。现行<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%B0%B4%E8%B5%84%E6%BA%90.md#1">水资源</a>开发政策以地表水为主、地下水为辅的方式是旧思维。</p>
-<p>总统蔡英文担任民进党主席时，他曾建议蔡英文，台湾的<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E6%B0%B4%E8%B5%84%E6%BA%90.md#1">水资源</a>开发与利用要重新思考，“把洪水变成水资源，台湾不缺水。”丁澈士说，台湾若能在丰水期蓄水于地下，一则把水补满，一则洪水被吸纳到地下，沿海地层下陷地区就不会淹水，而水经过过滤后，非常干净，农业、工业及民生用水都会有好品质。</p>
+<p>【大纪元2017年03月02日讯】（大纪元记者徐翠玲台湾台北报导）台湾2014~2015年闹<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%B1%E7%81%BE.md#1">旱灾</a>，2017年3月又进入<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%99%90%E6%B0%B4.md#1">限水</a>状态。台湾每年雨量平均2,500毫米，是世界平均值的2.6倍，但是，缺水却已成常态。屏东科技大学工学院长丁澈士批评，台湾捧着金饭碗要钱（水），笑话一桩。台湾必须翻转取水方式与用水观念，丰水期蓄水于地下，然后取用，枯水期再调配地表水与地下水，联合运用地表水、地下水，就可解决台湾降雨不均、洪水泛滥、<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%B0%E5%B1%82%E4%B8%8B%E9%99%B7.md#1">地层下陷</a>等问题。</p>
+<p>台湾中部、南部分别有70%、90%的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%99%8D%E9%9B%A8%E9%87%8F.md#1">降雨量</a>降在丰水期（5~10月），降雨量分布不均，造成台湾用水非常困难。此外，台湾是地震带，地层脆弱，地形、地貌加上地震及土石流等，导致地面水库淤积、减少寿龄。通常集水区又有很多农业活动的废水排入，让水质更加恶化。</p>
+<p>丁澈士指出，丰水期水库的水浊度很高，大家怕<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%B0%E5%B1%82%E4%B8%8B%E9%99%B7.md#1">地层下陷</a>，拚命用地表水。10月以后进入枯水期，地表水缺水，想抽地下水，地下水未做调蓄，水源早已流失。现行<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B0%B4%E8%B5%84%E6%BA%90.md#1">水资源</a>开发政策以地表水为主、地下水为辅的方式是旧思维。</p>
+<p>总统蔡英文担任民进党主席时，他曾建议蔡英文，台湾的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B0%B4%E8%B5%84%E6%BA%90.md#1">水资源</a>开发与利用要重新思考，“把洪水变成水资源，台湾不缺水。”丁澈士说，台湾若能在丰水期蓄水于地下，一则把水补满，一则洪水被吸纳到地下，沿海地层下陷地区就不会淹水，而水经过过滤后，非常干净，农业、工业及民生用水都会有好品质。</p>
 <p>缺水的人为因素大于自然因素。丁澈士表示，水资源用错政策，60年来，大家都习以为常，需要革命性地改变思维。30年来，大高雄、屏东地区用水观念已经改变，例如：屏东大潮州地下水人工补注湖、高屏溪利用辐射井取用伏流水，水利署、地方政府、自来水公司也慢慢改变观念，但执行力还是不够。</p>
 <p><strong>西南部冲洪积平原 如同庞大地下水库</strong></p>
 <p>台湾西南沿海地区，从彰化、云林、嘉义、高雄到屏东，是所谓冲洪积平原，扇顶靠近中央山脉，扇央是高速铁路经过的地方，扇尾在海边。冲洪积平原深度约2千~3千公尺以上，而地底下300公尺至地表上的蓄水空间比地面水库大了几千、几万倍。</p>
@@ -22,48 +22,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/2/23/n8842776.md#1">纽淡水资源状况堪忧 畜牧业是污染主因？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/2/24/n8843589.md#1">台盼降甘霖空中增雨  C-130启动</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/2/24/n8845521.md#1">北水局与空军合作空中增雨 天公却不作美</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/2/25/n8848662.md#1">用心打造一座幸福的花园城市</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/3/1/n8860377.md#1">中幅净水场铝超标  水公司：个案</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/3/1/n8861323.md#1">蔡英文：政府有责任发展科技有效利用水</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/3/1/n8861528.md#1">全美最高水坝主泄洪道关闭 将重新发电</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/3/1/n8861780.md#1">台旱象未纾解 新北桃竹一阶限水</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12459768.md#1">黑道份子经营应召站累犯 仅轻判6月刑</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458966.md#1">陈水扁曝：凯达格兰大道差点变玛丽莲梦路</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/2/23/n8842776.md#1">纽淡水资源状况堪忧 畜牧业是污染主因？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/2/24/n8843589.md#1">台盼降甘霖空中增雨  C-130启动</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/2/24/n8845521.md#1">北水局与空军合作空中增雨 天公却不作美</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/2/25/n8848662.md#1">用心打造一座幸福的花园城市</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/3/1/n8860377.md#1">中幅净水场铝超标  水公司：个案</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/3/1/n8861323.md#1">蔡英文：政府有责任发展科技有效利用水</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/3/1/n8861528.md#1">全美最高水坝主泄洪道关闭 将重新发电</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/3/1/n8861780.md#1">台旱象未纾解 新北桃竹一阶限水</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753539.md#1">异国恋诈骗 台北市刑大吁：见面再谈汇钱免谈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753482.md#1">恩恩爸要真相 立委吁新北市政府提供录音档</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/22/n11273218.md#1" target="_blank">用实际行动赎罪 派出所所长胃癌痊愈</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392041.md#1" target="_blank">法轮功简介</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456300.md#1">【西岸观察】川普为何不怕中共病毒？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458480.md#1">【珍言真语】美移民新规 易蓉：退党增几十倍</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458679.md#1">【西岸观察】保守vs激进 副总统辩论更有看头</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450596.md#1">【最新疫情10.5】川普已经回到白宫</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454388.md#1">华春莹酸川普医疗待遇特殊 网民拿习近平说事</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455500.md#1">受经济下滑影响 环北京燕郊房价出现大跌</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12458026.md#1">赵薇连输102场官司 将连带赔偿逾8千万元</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/2/n12448379.md#1">坚果助防癌  3招吃得安心又不怕胖</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456347.md#1">美国农夫心脏病发作 60个邻居帮忙收割</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12453462.md#1">俄罗斯母狮攻击小狮子 小狗罕见代劳当奶妈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/2/n8866271.htm">地表水及地下水联合运用 台湾不缺水 地层不下陷</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/3/2/n8866271.htm">地表水及地下水联合运用 台湾不缺水 地层不下陷</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uemdlg368/djy/blob/master/gb/17/3/2/n8866271.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/17/3/2/n8866271.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
